...
        IconButton(
            onClick = onPlayPause,
            modifier = Modifier.size(72.dp)
        ) {
            Icon(
                if (isPlaying) Icons.Default.PauseCircle else Icons.Default.PlayCircle,
                contentDescription = "Play/Pause",
                tint = Color.White,
                modifier = Modifier.size(68.dp)
            )
        }

        if (isSeekable) {
...
